# worth

./: .check.exs  .dialyzer_ignore.exs  .doctor.exs  .formatter.exs  .gitignore  AGENTS.md  BACKLOG.md  BRAND.md  CHANGELOG_0.2.0.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  PHASE3_PLAN.md  README.md  build.sh  mix.exs  worth_test.db
.github/workflows/: ci.yml  desktop-release.yml
.skills/worth-design/: README.md  colors_and_type.css
assets/css/: app.css
assets/js/: app.js
brand/: INSTALL.md  SKILL.md  brief.md
brand/preview/: bedrock-accent.html  chassis.html  fifth-buttons.html  heat-seam.html  inputs.html  logo.html  spacing-density.html  type-scale.html  voice.html  (+1 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: CLEANUP_ROADMAP.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_PROPOSAL_MULTI_PATHWAY_ROUTING.md  IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE.md  MIGRATION_FIX_NOTES.md  MIGRATION_LIBSQL_PLAN.md  MULTI_PATHWAY_ROUTING_ARCHITECTURE.md  appendix-mcp-research.md  appendix-skills-research.md  architecture.md  beam-architecture.md  brain.md  config.md  database-layer.md  implementation-strategy.md  llm-provider-abstraction-plan.md  mcp.md  memory.md  model-routing-analysis.md  project-structure.md  release-sop.md  risks.md  skills.md  testing.md  tools.md  tui-redesign.md  ui-enhancement-plan.md  ui.md  vision.md  workspaces.md
lib/: worth_web.ex
rel/: env.sh.eex
rel/desktop/src-tauri/: Cargo.toml  tauri.conf.json
rel/desktop/src-tauri/icons/: icon.icns
rel/desktop/src-tauri/src/: main.rs
test/: worth_test.exs
(+248 files in other folders)
